# chartscale_pi

./: CMakeLists.txt  ChartScale.fbp  README  VERSION.cmake  appveyor.yml
cmake/: PluginConfigure.cmake  PluginPackage.cmake
manual/: antora.yml  site.yml
manual/chartscale/modules/ROOT/pages/: chartscale.adoc
manual/docs/: 404.html  index.html  sitemap.xml
manual/docs/chartscale/0.1/: index.html
manual/modules/ROOT/pages/: index.adoc
po/: POTFILES.in  bg_BG.po  ca_ES.po  chartscale_pi.pot  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  en_GB.po  es_ES.po  et_EE.po  fi_FI.po  fil_PH.po  fr_FR.po  gl_ES.po  he_IL.po  hi_IN.po  hu_HU.po  id_ID.po  is_IS.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb_NO.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sv_SE.po  th_TH.po  tr_TR.po  vi_VN.po  zh_CN.po  zh_TW.po
src/: ChartScaleDialog.cpp  ChartScaleDialog.h  ChartScaleUI - Copy.h  ChartScaleUI.cpp  ChartScaleUI.h  PreferencesDialog.cpp  PreferencesDialog.h  chartscale_pi.cpp  chartscale_pi.h  icons.cpp  icons.h
